Source/WTF/wtf/PlatformUserPreferredLanguagesUnix.cpp
@@ -36,9 +36,9 @@ static String platformLanguage()
 {
     String localeDefault(setlocale(LC_CTYPE, nullptr));
     if (localeDefault.isEmpty() || equalIgnoringASCIICase(localeDefault, "C") || equalIgnoringASCIICase(localeDefault, "POSIX"))
-        return ASCIILiteral("en-us");
+        return ASCIILiteral("en-US");
 
-    String normalizedDefault = localeDefault.convertToASCIILowercase();
+    String normalizedDefault = localeDefault;
     normalizedDefault.replace('_', '-');
     normalizedDefault.truncate(normalizedDefault.find('.'));
     return normalizedDefault;
